--- a/index.css
+++ b/index.css
@@ -4,6 +4,46 @@ body {
   font-family: "Fredoka One", cursive;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
+.is-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 20px;
+  width: 300px;
+  height: 300px;
+  background-color: white;
+
+  transform: translate(-50%, -50%) scale(1) rotate(0);
+}
+
 .section {
   padding: 30px 50px;
 }
@@ -50,10 +90,15 @@ body {
   font-size: 25px;
 }
 
+.message {
+  color: yellow;
+}
+
 .message,
 .click {
   font-size: 30px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.8);
+  -webkit-text-stroke: 1px rgba(0, 0, 0, 0.8);
 }
 
 .map {
