--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
   padding: 0;
   margin: 0;
+  height: 100%;
   font-family: "Fredoka One", cursive;
 }
 
@@ -22,8 +23,16 @@ body {
   overflow: hidden;
 }
 
+.main-wrapper {
+  min-height: 100%;
+
+  display: flex;
+  flex-direction: column;
+}
+
 .section {
   padding: 30px 50px;
+  flex: 1 1 auto;
 }
 
 .title {
@@ -61,6 +70,7 @@ body {
 
 .wrapper {
   display: flex;
+  margin-bottom: 30px;
 }
 
 .info {
@@ -118,8 +128,7 @@ body {
   min-width: 100%;
   text-align: center;
   color: rgba(0, 0, 0, 0.8);
-  position: absolute;
-  left: 0;
+
   padding: 20px;
   border-top: 1px solid rgba(0, 0, 0, 0.8);
   background-color: rgba(0, 0, 0, 0.6);
