--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
   padding: 0;
   margin: 0;
-  height: 100%;
+  height: 100vh;
   font-family: "Fredoka One", cursive;
 }
 
@@ -70,7 +70,6 @@ body {
 
 .wrapper {
   display: flex;
-  margin-bottom: 30px;
 }
 
 .info {
